# la-server

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_Database_Design.md  SECURITY.md  companies_sample.csv  employees_sample.csv  main.py  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.ps1  start.sh
.github/workflows/: pre-commit.yml
app/: __init__.py  config.py  database.py  errors.py  logging_config.py  models.py  openapi_spec.py  peak_tracking.py  utils.py
app/auth/: decorations.py  routes.py  utils.py
app/routes/: __init__.py  companies.py  employees.py  health.py  job_assignment.py  openapi_docs.py  village_data.py
data/: requirements.txt  village.ini
data/csv-example/: companies_sample.csv
docs/: database_design.md  developer-guide.md  employee-numbers.md
scripts/: $check_poetry_to_requirements.py  $check_signed_off_by.py  $setup.ps1  $setup.sh  bulk_import_companies.py  bulk_import_employees.py  create_database.py  poetry_to_requirements.py  setup.ps1  setup.sh  test_endpoints.py
tests/: conftest.py  test_01_environment.py  test_02_health.py  test_03_error_handlers.py  test_05_bulk_import_company.py  test_06_bulk_import_employee.py  test_09_auth_api.py  test_10_company_api.py  test_11_employee_api.py  test_12_job_assignment.py  test_13_village_api.py  test_20_company_bulk_api.py  test_21_employee_bulk_api.py  test_30_openapi.py  test_utils.py
